--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+
+        <a href="./recipes/german-tater-tot-potato-salad.html">German Tater Tot Potato Salad</a>
     </body>
 </html>
