--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <body>
         <h1>Odin Recipes</h1>
 
-        <a href="./recipes/german-tater-tot-potato-salad.html">German Tater Tot Potato Salad</a>
+        <ul>
+            <li><a href="./recipes/german-tater-tot-potato-salad.html">German Tater Tot Potato Salad</a></li>
+        </ul>
+        
     </body>
 </html>
