--- a/recipes/german-tater-tot-potato-salad.html
+++ b/recipes/german-tater-tot-potato-salad.html
@@ -5,5 +5,23 @@
     </head>
     <body>
         <h1>German Tater Tot Potato Salad</h1>
+        <img src="">
+        
+        <h2>Description</h2>
+        <p></p>
+        <p></p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li></li>
+            <li></li>
+        </ol>
+
     </body>
 </html>
