--- a/recipes/german-tater-tot-potato-salad.html
+++ b/recipes/german-tater-tot-potato-salad.html
@@ -5,22 +5,37 @@
     </head>
     <body>
         <h1>German Tater Tot Potato Salad</h1>
-        <img src="">
+        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9300354.jpg&q=60&c=sc&orient=true&poi=auto&h=512">
         
         <h2>Description</h2>
-        <p></p>
-        <p></p>
+        <p>While this recipe may upset a few Germans, it's a risk I'm willing to take.
+            Tossed with a warm bacon dressing and made easy with crispy, crunchy, frozen potato nuggets, 
+            this take on a German potato salad makes an already easy recipe even easier. 
+            If you're a fan of Tater Tots, you'll find this salad to be spectacular in taste, texture, and appearance. 
+            Plus, there's no peeling, slicing, or boiling necessary!</p>
 
         <h2>Ingredients</h2>
         <ul>
-            <li></li>
-            <li></li>
+            <li>canola oil cooking spray</li>
+            <li>1 (28 ounce) package frozen bite-sized potato nuggets (such as Tater Tots®)</li>
+            <li>1 (8 ounce) package bacon, cut into 1/2-inch pieces</li>
+            <li>1 cup diced yellow onion</li>
+            <li>2 tablespoons white sugar</li>
+            <li>1 teaspoon freshly ground black pepper</li>
+            <li>1 teaspoon kosher salt, or more to taste</li>
+            <li>⅓ cup apple cider vinegar</li>
+            <li>1 tablespoon chopped fresh parsley</li>
+            <li>1 tablespoon chopped fresh chives</li>
         </ul>
 
         <h2>Steps</h2>
         <ol>
-            <li></li>
-            <li></li>
+            <li>Preheat the oven to 425 degrees F (220 degrees C). Cover a sheet pan with foil, and spray generously with cooking spray. </li>
+            <li>Spread frozen potato nuggets evenly on the prepared pan, then spray the tops with cooking spray. </li>
+            <li>Bake in the center of the preheated oven until well browned and extra crispy, 40 to 45 minutes. Please note, this will be about 10 to 15 minutes longer than the package directions. </li>
+            <li>Meanwhile, prepare dressing: Place bacon in a cold, dry pan. Turn heat to medium-high and cook until fat has rendered, and bacon is foamy and almost crisp. Reduce heat to medium and toss in diced onion. Cook, stirring occasionally, until onion starts to soften and turn translucent, about 3 minutes. </li>
+            <li>Stir in sugar, pepper, and 1 teaspoon salt; cook until sugar just starts to caramelize onto the bottom of the pan, about 1 minute. Deglaze the pan by stirring in apple cider vinegar and scraping the bottom of the pan to release any brown bits. Turn off the heat. </li>
+            <li>Remove Tater Tots from the oven and let cool for 5 minutes before transferring to a large mixing bowl. Pour warm bacon dressing over top and toss until thoroughly and evenly coated. Mix in parsley and chives. Taste and adjust for salt before serving. </li>
         </ol>
 
     </body>
