add links for the 2 new recipes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
         <ul>
             <li><a href="./recipes/german-tater-tot-potato-salad.html">German Tater Tot Potato Salad</a></li>
+            <li><a href="./recipes/german-potato-salad.html">German Tater Tot Potato Salad</a></li>
+            <li><a href="./recipes/octoberfest-german-potato-salad.html">German Tater Tot Potato Salad</a></li>
         </ul>
         
     </body>
