add reference to source of data

--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
             <li><a href="./recipes/octoberfest-german-potato-salad.html">Octoberfest German Potato Salad</a></li>
         </ul>
         
+        <p>Images and information used from:</p>
+        <a href="https://www.allrecipes.com/">https://www.allrecipes.com/</a>
     </body>
 </html>
