add some colors to the sites

--- a/recipes/german-potato-salad.html
+++ b/recipes/german-potato-salad.html
@@ -2,17 +2,18 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
         <h1>German Potato Salad</h1>
         <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8166734.jpg&q=60&c=sc&orient=true&poi=auto&h=512">
         
-        <h2>Description</h2>
+        <h2 class="description">Description</h2>
         <p>This German potato salad topped with a tangy bacon vinaigrette can be served warm, at room temperature, or cold, 
             making it the perfect side dish for any meal. My mother used to make this for us. 
             You can vary the amount of vinegar and sugar to change the taste around. Great for parties, picnics, and potlucks.</p>
 
-        <h2>Ingredients</h2>
+        <h2 class="ingredients">Ingredients</h2>
         <ul>
             <li>4 medium potatoes, cut into bite-sized pieces</li>
             <li>4 slices bacon</li>
@@ -24,7 +25,7 @@
             <li>salt and ground black pepper to taste</li>
         </ul>
 
-        <h2>Steps</h2>
+        <h2  class="steps">Steps</h2>
         <ol>
             <li>Bring a large pot of salted water to a boil. Add potatoes; cook until fork-tender, 8 to 15 minutes. Drain. </li>
             <li>While the potatoes are cooking, cook bacon in a large, deep skillet over medium-high heat until browned and crispy, 8 to 10 minutes. Remove bacon to a paper-towel lined plate, leaving the fat in the skillet. Chop or crumble bacon when cool enough to handle. </li>
