--- a/recipes/german-tater-tot-potato-salad.html
+++ b/recipes/german-tater-tot-potato-salad.html
@@ -2,19 +2,20 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
         <h1>German Tater Tot Potato Salad</h1>
         <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9300354.jpg&q=60&c=sc&orient=true&poi=auto&h=512">
         
-        <h2>Description</h2>
+        <h2 class="description">Description</h2>
         <p>While this recipe may upset a few Germans, it's a risk I'm willing to take.
             Tossed with a warm bacon dressing and made easy with crispy, crunchy, frozen potato nuggets, 
             this take on a German potato salad makes an already easy recipe even easier. 
             If you're a fan of Tater Tots, you'll find this salad to be spectacular in taste, texture, and appearance. 
             Plus, there's no peeling, slicing, or boiling necessary!</p>
 
-        <h2>Ingredients</h2>
+        <h2 class="ingredients">Ingredients</h2>
         <ul>
             <li>canola oil cooking spray</li>
             <li>1 (28 ounce) package frozen bite-sized potato nuggets (such as Tater Tots®)</li>
@@ -28,7 +29,7 @@
             <li>1 tablespoon chopped fresh chives</li>
         </ul>
 
-        <h2>Steps</h2>
+        <h2  class="steps">Steps</h2>
         <ol>
             <li>Preheat the oven to 425 degrees F (220 degrees C). Cover a sheet pan with foil, and spray generously with cooking spray. </li>
             <li>Spread frozen potato nuggets evenly on the prepared pan, then spray the tops with cooking spray. </li>
