--- a/recipes/octoberfest-german-potato-salad.html
+++ b/recipes/octoberfest-german-potato-salad.html
@@ -2,15 +2,16 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
         <h1>Octoberfest German Potato Salad</h1>
         <img src="https://www.allrecipes.com/thmb/nuTNUm-zPXW6i0a32nAGxQgbwBw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/2372623-20c1769a714144be95eda03ed59009a5.jpg">
         
-        <h2>Description</h2>
+        <h2 class="description">Description</h2>
         <p>This creamy German potato salad is wonderful served with Bratwurst and sauerkraut!</p>
 
-        <h2>Ingredients</h2>
+        <h2 class="ingredients">Ingredients</h2>
         <ul>
             <li>3 pounds potatoes, peeled and sliced</li>
             <li>½ cup chopped onion</li>
@@ -23,7 +24,7 @@
             <li>ground black pepper to taste</li>
         </ul>
 
-        <h2>Steps</h2>
+        <h2 class="steps">Steps</h2>
         <ol>
             <li>Place potatoes in a large pot and cover with water; bring to a boil. Reduce heat to medium-low and simmer until tender, about 15 minutes. Drain, and transfer to a large bowl. Add onions. </li>
             <li>Whisk mayonnaise, vinegar, oil, sugar, parsley, salt, and pepper together in a large bowl. Gently stir in the potatoes and onion. Let stand for 1 hour before serving to enhance flavors. </li>
